# PC_CLIENT

./: setfileencode.py
toonqt/: CMakeLists.txt  Toon.sln  Toond.psess  Toonglobal.ini  toon.rc.in  version.rc.in
toonqt/Avatar/: Avatar.cpp  Avatar.filters  Avatar.h  Avatar.pri  Avatar.pro  Avatar.qrc  Avatar.vcxproj  Avatar.vcxproj.filters  AvatarMenuBase.cpp  AvatarMenuBase.h  Avatar_global.h  CMakeLists.txt  download_face_model.cpp  download_face_model.h
toonqt/CardCase/: CMakeLists.txt  CardCase.cpp  CardCase.h  CardCase.pri  CardCase.pro  CardCase.qrc  CardCase.vcxproj  CardCase.vcxproj.filters  CardCaseDetailsArea.cpp  CardCaseDetailsArea.h  CardCaseListArea.cpp  CardCaseListArea.h  TNCardCaseTreeItem.cpp  TNCardCaseTreeItem.h  cardcase_global.h  resource.h
toonqt/Common/: CMakeLists.txt  Common.cpp  Common.h  Common.vcxproj  Common.vcxproj.filters  DetailsAreaBase.cpp  DetailsAreaBase.h  DropShadowWidget.cpp  DropShadowWidget.h  ListAreaBase.cpp  ListAreaBase.h  MenuAreaBase.cpp  MenuAreaBase.h  PluginExportBase.cpp  PluginExportBase.h  TNCHNHelper.cpp  TNCHNHelper.h  TNConfig.cpp  TNConfig.h  TNDebugLog.cpp  TNDebugLog.h  TNDocument.cpp  TNDocument.h  TNGlobalShotCutManagement.cpp  TNGlobalShotCutManagement.h  TNListModel.cpp  TNListModel.h  TNMessageBox.cpp  TNMessageBox.h  TNMessageBox.ui  TNMessageListAdapter.cpp  TNMessageListAdapter.h  TNNameSpace.h  TNPathUtil.cpp  TNPathUtil.h  TNProgressLoading.cpp  TNProgressLoading.h  TNProgressLoadingWithPrompt.cpp  TNProgressLoadingWithPrompt.h  TNPromptSignLabel.cpp  (+41 more)
toonqt/Copy/: Copy.vcxproj  ToonCopy_Win32_Debug.bat  ToonCopy_Win32_Release.bat  ToonCopy_x64_Debug.bat  ToonCopy_x64_Release.bat
toonqt/FaceId/: CMakeLists.txt  FaceId.vcxproj  FaceId.vcxproj.filters  baseimagelist.cpp  baseimagelist.h  buildfacemodel.cpp  buildfacemodel.h  cameraframegrabber.cpp  cameraframegrabber.h  faceid.cpp  faceid.h  faceid_global.h  facerecognition.cpp  facerecognition.h  facetracking.cpp  facetracking.h  tncapturevideo.cpp  tncapturevideo.h  tnimagehelper.cpp  tnimagehelper.h  tnshowfacedialog.cpp  tnshowfacedialog.h  tnshowfacedialog.ui  tnshowfacelabel.cpp  tnshowfacelabel.h
toonqt/HTTP/: CMakeLists.txt  CTNBaseBean.h  CTNHttpConfig.cpp  CTNHttpConfig.h  CTNNetWork.cpp  CTNNetWork.h
toonqt/HomePage/: CMakeLists.txt  HomePage.cpp  HomePage.h  HomePage.pri  HomePage.pro  HomePage.vcxproj  HomePage.vcxproj.filters  HomePageDetailsArea.cpp  HomePageDetailsArea.h  HomePageDetailsArea.ui  HomePageListArea.cpp  HomePageListArea.h  TNAppJsonObjectParser.cpp  TNAppJsonObjectParser.h  TNHomePageTreeItem.cpp  TNHomePageTreeItem.h  TNHomePageTreeItemDelegate.cpp  TNHomePageTreeItemDelegate.h  TNHomePageTreeModel.cpp  TNHomePageTreeModel.h  TNHomePageTreeView.cpp  TNHomePageTreeView.h  homepage_global.h
toonqt/IMCore/: CMakeLists.txt  IMCore.vcxproj  IMCore.vcxproj.filters  TNIMCoreClient.cpp  TNIMCoreClient.h  TNIMCoreProcessor.cpp  TNIMCoreProcessor.h  TNIMMessageOperater.cpp  TNIMMessageOperater.h  TNIMMsgManager.cpp  TNIMMsgManager.h  TNIMNoticeProcessor.cpp  TNIMNoticeProcessor.h  TNIMReadSessionManager.cpp  TNIMReadSessionManager.h  TNIMSDKClient.cpp  TNIMSDKClient.h  TNNoticeUpdater.cpp  TNNoticeUpdater.h  TNUserDataHelper.cpp  TNUserDataHelper.h  TNUserVersionInfo.cpp  TNUserVersionInfo.h  ctnimclienttnmp.cpp  ctnimclienttnmp.h  imcore.cpp  imcore.h  imcore_global.h  tncmessage.cpp  tncmessage.h  tnimutil.cpp  tnimutil.h  tnmessagebody.cpp  tnmessagebody.h  tnnotifycenter.cpp  tnnotifycenter.h
toonqt/LocalStorage/: CMakeLists.txt  ConnectionPool.cpp  ConnectionPool.h  LocalStorage.vcxproj  LocalStorage.vcxproj.filters  LocalStorageCommon.cpp  LocalStorageCommon.h  TNBMessage0.cpp  TNBMessage0.h  TNBaseTable.cpp  TNBaseTable.h  TNBlackList.cpp  TNBlackList.h  TNChatAppList.cpp  TNChatAppList.h  TNChatSettings.cpp  TNChatSettings.h  TNColleagueGroup.cpp  TNColleagueGroup.h  TNColleagueRelation.cpp  TNColleagueRelation.h  TNCompanyExtFieldParser.cpp  TNCompanyExtFieldParser.h  TNCompanyInfo.cpp  TNCompanyInfo.h  TNDataCache.cpp  TNDataCache.h  TNDataControlServer.cpp  TNDataControlServer.h  TNDbUtil.cpp  TNDbUtil.h  TNFeed.cpp  TNFeed.h  TNGroupInfo.cpp  TNGroupInfo.h  TNGroupMember.cpp  TNGroupMember.h  TNJoinStuff.cpp  TNJoinStuff.h  TNLoginUser.cpp  (+34 more)
toonqt/Mine/: CMakeLists.txt  Mine.cpp  Mine.h  Mine.pri  Mine.pro  Mine.qrc  Mine.vcxproj  Mine.vcxproj.filters  MineDetailsArea.cpp  MineDetailsArea.h  MineListArea.cpp  MineListArea.h  TNMineAdapter.cpp  TNMineAdapter.h  TNMineDelegate.cpp  TNMineDelegate.h  TNMineModel.cpp  TNMineModel.h  mine_global.h
toonqt/NetWorkAPI/: CMakeLists.txt  NetWorkAPI.cpp  NetWorkAPI.h  NetWorkAPI.pri  NetWorkAPI.vcxproj  NetWorkAPI.vcxproj.filters  NetWorkAPI_global.h  TNDataStatistics.cpp  TNDataStatistics.h  TNHomePageConfigParser.cpp  TNHomePageConfigParser.h  TNHttpAddGroupChatMember.cpp  TNHttpAddGroupChatMember.h  TNHttpApi.cpp  TNHttpApi.h  TNHttpBaseApi.cpp  TNHttpBaseApi.h  TNHttpBasicRouterApi.cpp  TNHttpBasicRouterApi.h  TNHttpCheckVCodeBeforeLogin.cpp  TNHttpCheckVCodeBeforeLogin.h  TNHttpCloudApi.cpp  TNHttpCloudApi.h  TNHttpCreateGroupChat.cpp  TNHttpCreateGroupChat.h  TNHttpDam.cpp  TNHttpDam.h  TNHttpDomainRouterApi.cpp  TNHttpDomainRouterApi.h  TNHttpDownCloud.cpp  TNHttpDownCloud.h  TNHttpDownFile.cpp  TNHttpDownFile.h  TNHttpFeedBack.cpp  TNHttpFeedBack.h  TNHttpFriendRequest.cpp  TNHttpFriendRequest.h  TNHttpFriendRequestByPhone.cpp  TNHttpFriendRequestByPhone.h  TNHttpGetCompanyFeedIdByComId.cpp  (+101 more)
toonqt/Notice/: CMakeLists.txt  Notice.cpp  Notice.h  Notice.pri  Notice.pro  Notice.qrc  Notice.vcxproj  Notice.vcxproj.filters  NoticeEnum.h  SendFowardSelectContactDialog.cpp  SendFowardSelectContactDialog.h  SendFowardSelectContactDialog.ui  TNBatchSendFileConfirmDialog.cpp  TNBatchSendFileConfirmDialog.h  TNBatchSendFileConfirmDialog.ui  TNBatchSendImageConfirmDialog.cpp  TNBatchSendImageConfirmDialog.h  TNBatchSendImageConfirmDialog.ui  TNDropDownPushButton.cpp  TNDropDownPushButton.h  TNExitGroupChatConfirmDialog.cpp  TNExitGroupChatConfirmDialog.h  TNImageLoadThread.cpp  (+20 more)
(+1147 files in other folders)
